--- a/.github/workflows/01-building-blocks.yaml
+++ b/.github/workflows/01-building-blocks.yaml
@@ -1,7 +1,7 @@
 name: 01 - Building Blocks
 on:
   - push
-  - workflow_dispatch
+  #  - workflow_dispatch
 jobs:
   echo-hello:
     runs-on: ubuntu-latest
@@ -13,8 +13,8 @@ jobs:
     steps:
       - name: failed step
         run: |
-          echo "It is failing"
-          exit 1
+          #echo "It is failing"
+          exit 0
       - name: Say goodbye
         run: echo "goodbye!"
 
