--- a/.github/workflows/02-workflow-events.yaml
+++ b/.github/workflows/02-workflow-events.yaml
@@ -4,5 +4,5 @@ jobs:
   name: echo
   runs-on: ubuntu-latest
     steps:
-      name: Show the Trigger
-      run: echo "Event name: ${{ github.event_name }}"
+      - name: Show the Trigger
+        run: echo "Event name: ${{ github.event_name }}"
